; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/quatech_usb2/extr_quatech_usb2.c_qt2_process_port_change.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/quatech_usb2/extr_quatech_usb2.c_qt2_process_port_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_serial_port = type { %struct.usb_serial* }
%struct.usb_serial = type { i32* }
%struct.quatech2_dev = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_serial_port*, i8)* @qt2_process_port_change to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @qt2_process_port_change(%struct.usb_serial_port* %0, i8 zeroext %1) #0 {
  %3 = alloca %struct.usb_serial_port*, align 8
  %4 = alloca i8, align 1
  %5 = alloca %struct.usb_serial*, align 8
  %6 = alloca %struct.quatech2_dev*, align 8
  store %struct.usb_serial_port* %0, %struct.usb_serial_port** %3, align 8
  store i8 %1, i8* %4, align 1
  %7 = load %struct.usb_serial_port*, %struct.usb_serial_port** %3, align 8
  %8 = getelementptr inbounds %struct.usb_serial_port, %struct.usb_serial_port* %7, i32 0, i32 0
  %9 = load %struct.usb_serial*, %struct.usb_serial** %8, align 8
  store %struct.usb_serial* %9, %struct.usb_serial** %5, align 8
  %10 = load %struct.usb_serial*, %struct.usb_serial** %5, align 8
  %11 = call %struct.quatech2_dev* @qt2_get_dev_private(%struct.usb_serial* %10)
  store %struct.quatech2_dev* %11, %struct.quatech2_dev** %6, align 8
  %12 = load %struct.usb_serial*, %struct.usb_serial** %5, align 8
  %13 = getelementptr inbounds %struct.usb_serial, %struct.usb_serial* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = load i8, i8* %4, align 1
  %16 = zext i8 %15 to i64
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.quatech2_dev*, %struct.quatech2_dev** %6, align 8
  %20 = getelementptr inbounds %struct.quatech2_dev, %struct.quatech2_dev* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  ret void
}

declare dso_local %struct.quatech2_dev* @qt2_get_dev_private(%struct.usb_serial*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
